@@ -1,7 +1,6 @@
-*** security -> check if the loginWithCode is the refresh or otp token, because can the bad user try to login with a different token
-    * do it for all endpoints, maybe we needs an enum to map all possibilities
 
-*** google callback today that is return the refreshtoken, change to return userinfotoken
+
+** OAUTH GOOGLE DEFAULT LANGUAGE SAVE
 
 continuar: I was development at oAuthController, I need to create an endpoint to set an application role to userId. 
 Important: Like as Google oauth2, I think to create two endpoints in the OAuth tag.
@@ -41,3 +40,11 @@ For exemple: GET query name today -> token, correctily -> refreshToken (like the
 ** google login we need to update the user too, not only create
 
 ** encript operations around the code, become to use the passwordEncryptServe
+
+
+_________________________
+
+OK DONE *** security -> check if the loginWithCode is the refresh or otp token, because can the bad user try to login with a different token
+    * do it for all endpoints, maybe we needs an enum to map all possibilities
+
+OK DONE *** google callback today that is return the refreshtoken, change to return userinfotoken
